<resources>
    <string name="app_name">HealthTracker</string>
    <string name="inspo_quote">INSPO QUOTE</string>
    <string name="finger_exercises">Finger Exercises</string>
    <string name="journal">Journal</string>
    <string name="reminders">Reminders</string>
    <string name="stopwatch">STOPWATCH</string>
    <string name="exercise">Exercise!</string>
    <string name="get_those_thumbs_clicking">Get those thumbs clicking!</string>
    <string name="your_exercise_journal">Your Exercise Journal</string>
    <string name="journal_title">Journal Title</string>
    <string name="quantity">Quantity</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="add_journal_entry">Add Journal Entry</string>
    <string name="back">Back</string>
    <string name="textview">TextView</string>
    <string name="next">Next</string>
    <string name="drinking_water_is_vital_to_your_health_studies_have_shown_that_it_can_reduce_hunger_and_increase_hydration">Drinking water is vital to your health. Studies have shown that it can reduce hunger and increase hydration.</string>
    <string name="set_a_reminder_to_drink_water_every_2_hours">Set a reminder to drink water every 2 hours:</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="_00_00_00_000">00:00:00.000</string>
    <string name="description">Description</string>
    <string name="example_application">Example application</string>
    <string name="date">Date</string>
    <string name="image">Image</string>
    <string name="image_carousel">image carousel</string>
    <string name="logged_in_user">username</string>
    <string name="finger_exercise_stat">finger-exercise-stat</string>
    <string name="visit_count_stat">visit-count-stat</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginpassword">Password:</string>
    <string name="loginUsername">Username:</string>
    <string name="string_loginusername" />
    <string name="login">Login</string>
    <string name="account_login">Account Login</string>
    <string name="Loginusername">Username:</string>
    <string name="Stored_cookie">Default</string>

</resources>
